# OpenJK-Module-PrivateDuel

./: CMakeLists.txt
src/: privateduel.c
